--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
 server {
     listen 80;
+#     server_name _;
 
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
-        # 🔥 This is the key line for Angular routing:
         try_files $uri $uri/ /index.html;
     }
 
@@ -14,4 +14,5 @@ server {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+#      add_header Access-Control-Allow-Origin *;
 }
